# AMPS

./: .gitignore  Config.pl  Makefile  Makefile.def.amps  PARAM.XML  ampsConfig.pl  exosphere.pl  sep_focused_transport-ih-MOVER_KARTAVYKH_2016_AJ_DRIFT.input
MakefileTest/: Table  makefile.test.app
doc/: AMPS.tex  AMPS_Examples.tex  AMPS_Installation.tex  Known-issues-and-solution.docx  Makefile  ecsim.tex  focused_transport.tex  focused_transport1.tex  idf.tex  parker_eq.tex  shock.tex  turbulence.tex
input/: bullet.surface.nas  ccmc.pl  cg-dust-test-tetra-cut-mesh.input  cg-pproc.pl  cg.input  cg.pl  comet_sphere.input  earth-cutoff-rigidity.input  earth-cutoff-rigidity_t96.input  earth-geospace_boundary_injection_sw_t96.input  earth-impulse-source-neutron.input  earth.input.pl  enceladus--multi-plume.pl  europa-test1.input  europa-test1_dev.input  europa-test2.input  europa.input  europa.input.pl  europa_dev.input  exoplanet.input  extract-trajectory.input.pl  fluid-pic-coupler-dynamic.input  fluid-pic-coupler-dynamic_mem_test.input  fluid-pic-coupler-with-correction.input  fluid-pic-coupler.input  fluxrope-dynamic.input  gca_mover.input  hartley2.shape.nas  mars-ions.input.pl  mars.pl  mercury-ions.input  moon-restart.input  moon-tetra-cut-cells.input  moon-tetra-cut-mesh.input  moon.input.pl  oh.input  oh.input.pl  orbiter.input  orbiter.input.pl  photon-test.input  (+8 more)
other/: 1d-test-particle.cpp  IH_wrapper.f90  graddiv.mw  graddivnew.mw  ppEppx.mw  ppEppy.mw  ppEppz.mw
srcBullet/: UserDefinition.meshAMR.h  main.cpp
srcCCMC/: ccmc.h  main.cpp  main_lib.cpp
srcCG/: Comet.cpp  Comet.h  CometData.cpp  Gravity.cpp  Gravity.h  RosinaMeasurements.cpp  SunLocation.cpp  main.cpp
srcCG-IlluminationLOS/: Comet.cpp  Comet.h  Gravity.cpp  Gravity.h  main.cpp
srcCouplerTest/: Exosphere_Helium.cpp  Moon.cpp  Moon.h  Moon_SampleVelocityDistribution.cpp  main_lib.cpp
srcEarth/: Atmosphere.cpp  BoundaryInjection.cpp  BoundaryInjection_GCR.cpp  BoundaryInjection_SEP.cpp  BoundaryInjection_SW.cpp  CutoffRigidity.cpp  DomainBoundaryParticlePropertyTable.cpp  Earth.cpp  Earth.dfn  Earth.h  Earth_Sampling.cpp  EnergeticParticlePhysics.cpp  ImpulseSource.cpp  OutsideParticleFlux.cpp  READ.md  README.md  SamplingIndividualPoints.cpp  SurfaceDataStructure.h  TrajectoryFilter.cpp  main.cpp  (+7 more)
srcEarth/shieldSim/: CMakeLists.txt  READ.ME  README.md  shieldSim.cc
srcEarth/shieldSim/include/: CLI.hh  ComputedQuantities.hh  DetectorConstruction.hh  EventAction.hh  GCRSpectrum.hh  MaterialCatalog.hh  OutputUtils.hh  PrimaryGeneratorAction.hh  RunAction.hh  ShieldSimConfig.hh  SpecBins.hh  SteppingAction.hh
srcEarth/shieldSim/macros/: example_commands.sh
srcEarth/shieldSim/scrips/: plot_4curves.py  plot_4curves_log.py  plot_dose_sweep.py  plot_dose_sweep_single_panel.py  plot_shield_spectra.py
srcEarth/shieldSim/src/: CLI.cc  ComputedQuantities.cc  DetectorConstruction.cc  EventAction.cc  GCRSpectrum.cc  MaterialCatalog.cc  OutputUtils.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
srcEarth/shieldSim/tests/: README.md  regression_tools.py  run_layer1_tests.sh  run_layer2_tests.sh  run_layer3_tests.sh  run_layer4_tests.sh
srcEarth/shieldSim/tests/expected/: README.md
srcEarth/shieldSim/tests/expected/layer4/: README.md
(+879 files in other folders)
